# datahub-tools

./: .gitignore  .pre-commit-config.yaml  CHANGE_LOG.md  CONTRIBUTING_LICENSE.md  LICENSE  README.md  pyproject.toml  setup.cfg
examples/: annotate_sql.py  propagate_priorities.py
examples/transforming/: README.md  pyproject.toml
examples/transforming/src/metadata_transformers/: priority_metadata.py  priority_metadata_transformer.py
src/datahub_tools/: classes.py  client.py  dbt.py  utils.py
tests/: test_classes.py
