[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'datahub_tools'
description = 'Python tools for working with DataHub'
version = '2.2.1'
readme = 'README.md'
requires-python = '>=3.9'
dependencies = ['acryl-datahub>=0.10.3.2', 'jmespath', 'requests']

[tool.setuptools]
include-package-data = false
package-dir = { "" = "src" }

[tool.black]
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.tox]
legacy_tox_ini = '''
[tox]
envlist = py39,py310,py311
isolated_build = True

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
deps = pytest
commands = pytest
'''

# rules doc: https://beta.ruff.rs/docs/rules/#mccabe-c90
[tool.ruff]
select = ["B", "C", "E", "F", "I", "N", "W", "RUF"]

fixable = [
    "I", # isort
]
unfixable = []

exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 110
target-version = "py39"
